test/files/neg/t9617.check
Test.scala:4: warning: class DeprecatedClass in package p1 is deprecated
  def useC = p1.DeprecatedClass.foo
                ^
Test.scala:5: warning: method foo in class DeprecatedMethod is deprecated
  def useM = p1.DeprecatedMethod.foo
                                 ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
